--- a/app/src/main/res/layout/fragment_display_medicine.xml
+++ b/app/src/main/res/layout/fragment_display_medicine.xml
@@ -77,7 +77,7 @@
             android:layout_marginTop="68dp"
             android:text="Reminder"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView8" />
+            app:layout_constraintTop_toBottomOf="@+id/timedate" />
 
         <TextView
             android:id="@+id/textView3"
@@ -91,7 +91,7 @@
             app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
         <TextView
-            android:id="@+id/textView4"
+            android:id="@+id/refilltime"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
@@ -111,19 +111,7 @@
             android:layout_marginTop="60dp"
             android:text="prespection Refill"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView4" />
-
-        <TextView
-            android:id="@+id/textView6"
-            style="@style/Widget.AppCompat.Button.Borderless"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="12dp"
-            android:text="No refill reminder"
-            android:textColor="@color/black"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView5" />
+            app:layout_constraintTop_toBottomOf="@+id/refilltime" />
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/suspendBtn"
@@ -170,7 +158,7 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:id="@+id/textView8"
+            android:id="@+id/timedate"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
@@ -195,6 +183,26 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:rippleColor="#33AAAAAA"
             app:strokeColor="@color/black" />
+
+        <TextView
+            android:id="@+id/drug_amount"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="24dp"
+            android:text="TextView"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textView5" />
+
+        <TextView
+            android:id="@+id/leftdrug"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="15dp"
+            android:text="TextView"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/drug_amount" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </LinearLayout>
 
