--- a/app/src/main/res/layout/fragment_update_medication.xml
+++ b/app/src/main/res/layout/fragment_update_medication.xml
@@ -18,6 +18,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
             android:background="@color/white"
+            android:elevation="15dp"
             android:orientation="vertical">
 
             <TextView
@@ -25,7 +26,6 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="@color/blue"
-                android:layout_marginBottom="15dp"
                 android:textSize="18dp"
                 android:layout_marginLeft="10dp"
                 android:text="@string/medicineName" />
@@ -39,13 +39,6 @@
 
         </LinearLayout>
 
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="10dp"
-            android:id="@+id/afterLayout1"
-            android:backgroundTint="@color/blue"
-            android:text="@string/nextBtn" />
 
         <LinearLayout
             android:id="@+id/remindertimes_layout"
@@ -72,54 +65,15 @@
                 android:layout_height="wrap_content"
                 android:id="@+id/afterreminderSwitch"
                 android:orientation="vertical">
-            <Spinner
-                android:id="@+id/frequencyOfRepition"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="10dp"
-                android:entries="@array/time" />
-<LinearLayout
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:id="@+id/noOftimesLayout">
-            <androidx.constraintlayout.widget.ConstraintLayout
-                android:layout_width="match_parent"
-                android:id="@+id/oneTimeaday"
-                android:layout_height="wrap_content">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="22dp"
-                    android:layout_margin="10dp"
-                    android:layout_marginTop="8dp"
-                    android:layout_marginEnd="16dp"
-                    android:hint="selectTime"
-                    android:textColor="@color/blue"
-                    android:layout_marginBottom="20dp"
-
-                    android:id="@+id/timer_txtone"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
-
-                <TextView
-                    android:id="@+id/number_txtone"
+                <Spinner
+                    android:id="@+id/frequencyOfRepition"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="right"
                     android:layout_margin="10dp"
-                    android:layout_marginStart="16dp"
-                    android:layout_marginBottom="20dp"
-                    android:layout_marginTop="8dp"
-                    android:textColor="@color/blue"
-                    android:hint="select number"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
+                    android:entries="@array/time" />
 
-            </androidx.constraintlayout.widget.ConstraintLayout>
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
-                    android:id="@+id/twoTimeaday"
                     android:layout_height="wrap_content">
 
                     <TextView
@@ -132,12 +86,12 @@
                         android:textColor="@color/blue"
                         android:layout_marginBottom="20dp"
 
-                        android:id="@+id/timer_txttwo"
+                        android:id="@+id/timer_txtone"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
 
                     <TextView
-                        android:id="@+id/number_txttwo"
+                        android:id="@+id/number_txtone"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="right"
@@ -151,41 +105,6 @@
                         app:layout_constraintTop_toTopOf="parent" />
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
-                <androidx.constraintlayout.widget.ConstraintLayout
-                    android:layout_width="match_parent"
-                    android:id="@+id/threeTimeaday"
-                    android:layout_height="wrap_content">
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="22dp"
-                        android:layout_margin="10dp"
-                        android:layout_marginTop="8dp"
-                        android:layout_marginEnd="16dp"
-                        android:hint="selectTime"
-                        android:textColor="@color/blue"
-                        android:layout_marginBottom="20dp"
-
-                        android:id="@+id/timer_txtthree"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintTop_toTopOf="parent" />
-
-                    <TextView
-                        android:id="@+id/number_txtthree"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="right"
-                        android:layout_margin="10dp"
-                        android:layout_marginStart="16dp"
-                        android:layout_marginBottom="20dp"
-                        android:layout_marginTop="8dp"
-                        android:textColor="@color/blue"
-                        android:hint="select number"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent" />
-
-                </androidx.constraintlayout.widget.ConstraintLayout>
-            </LinearLayout>
             </LinearLayout>
         </LinearLayout>
         <LinearLayout
@@ -199,7 +118,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-              android:textSize="18dp"
+                android:textSize="18dp"
                 android:layout_margin="10dp"
                 android:textColor="@color/blue"
                 android:text="@string/scheduling"/>
@@ -211,7 +130,7 @@
                 <TextView
                     android:id="@+id/schedualing_txt"
                     android:layout_width="wrap_content"
-                 android:layout_margin="10dp"
+                    android:layout_margin="10dp"
                     android:textColor="@color/black"
                     android:textSize="15dp"
                     android:layout_height="match_parent"
@@ -252,20 +171,20 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:id="@+id/daysrg">
-            <RadioButton
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:backgroundTint="@color/blue"
-                android:id="@+id/isdaily"
-                android:layout_margin="10dp"
-                android:text="every day"/>
-            <RadioButton
-                android:layout_width="match_parent"
-                android:backgroundTint="@color/blue"
-                android:layout_height="wrap_content"
-                android:id="@+id/specificdays"
-                android:layout_margin="10dp"
-                android:text="Specific days of the week"/>
+                <RadioButton
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:backgroundTint="@color/blue"
+                    android:id="@+id/isdaily"
+                    android:layout_margin="10dp"
+                    android:text="every day"/>
+                <RadioButton
+                    android:layout_width="match_parent"
+                    android:backgroundTint="@color/blue"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/specificdays"
+                    android:layout_margin="10dp"
+                    android:text="Specific days of the week"/>
             </RadioGroup>
             <LinearLayout
                 android:layout_width="match_parent"
@@ -331,13 +250,7 @@
 
             </LinearLayout>
         </LinearLayout>
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="10dp"
-            android:backgroundTint="@color/blue"
-            android:id="@+id/afterLayout3"
-            android:text="@string/nextBtn" />
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -349,6 +262,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_margin="10dp"
                 android:textColor="@color/blue"
                 android:textSize="18dp"
                 android:text="@string/medicinesymbol"/>
@@ -427,20 +341,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
-                <Button
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="10dp"
-                    android:id="@+id/afterLayout4"
-                    android:backgroundTint="@color/blue"
-                    android:text="@string/done" />
-                <Button
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:backgroundTint="@color/blue"
-                    android:layout_margin="10dp"
-                    android:id="@+id/moreopitions"
-                    android:text="@string/moreopitionsBtn" />
+
             </LinearLayout>
             <LinearLayout
                 android:layout_width="match_parent"
@@ -565,36 +466,36 @@
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
                 android:id="@+id/ifIsReminderdLayout">
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:text="@string/WhenIhaveleft"
+                        android:layout_margin="10dp"
+                        android:layout_height="wrap_content"/>
+                    <TextView
+                        android:id="@+id/selectAmountRefill"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="10dp"
+                        android:textColor="@color/blue"
+                        android:hint="@string/selectamaount"/>
+                </LinearLayout>
                 <TextView
                     android:layout_width="wrap_content"
-                    android:text="@string/WhenIhaveleft"
                     android:layout_margin="10dp"
+                    android:text="@string/atanytime"
                     android:layout_height="wrap_content"/>
                 <TextView
-                    android:id="@+id/selectAmountRefill"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:id="@+id/selectRefillTime"
                     android:layout_margin="10dp"
+                    android:hint="@string/selctTime"
                     android:textColor="@color/blue"
-                    android:hint="@string/selectamaount"/>
+                    android:layout_height="wrap_content"/>
             </LinearLayout>
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_margin="10dp"
-                android:text="@string/atanytime"
-                android:layout_height="wrap_content"/>
-            <TextView
-                android:layout_width="wrap_content"
-                android:id="@+id/selectRefillTime"
-                android:layout_margin="10dp"
-                android:hint="@string/selctTime"
-                android:textColor="@color/blue"
-                android:layout_height="wrap_content"/>
-        </LinearLayout>
         </LinearLayout>
         <Button
             android:layout_width="wrap_content"
