--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -61,4 +61,9 @@
         android:name="com.example.medicationreminder.displayMedics.view.displayMedicineFragment"
         android:label="fragment_display_medicine"
         tools:layout="@layout/fragment_display_medicine" />
+    <fragment
+        android:id="@+id/updateMedicationFragment"
+        android:name="com.example.medicationreminder.updateMedicationFragment"
+        android:label="fragment_update_medication"
+        tools:layout="@layout/fragment_update_medication" />
 </navigation>
