--- a/app/src/main/res/layout/fragment_add_medication.xml
+++ b/app/src/main/res/layout/fragment_add_medication.xml
@@ -56,7 +56,7 @@
             android:elevation="15dp"
             android:orientation="vertical">
 
-            <Switch
+            <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
@@ -248,6 +248,14 @@
                 android:id="@+id/noOfdaysEdite"
                 android:hint="enter number of days"
                 android:inputType="number"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="When?"
+                android:layout_margin="10dp"
+                android:textSize="20dp"
+                android:textColor="@color/blue"
+                />
             <RadioGroup
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
@@ -557,7 +565,7 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
                 android:textColor="@color/blue"
-                android:id="@+id/isReminderd"
+                android:id="@+id/isRefillReminderd"
                 android:textSize="18dp"
                 android:text="@string/Aremindertofillthemedicine"/>
             <LinearLayout
