--- a/app/src/main/res/layout/fragment_display_medicine.xml
+++ b/app/src/main/res/layout/fragment_display_medicine.xml
@@ -80,7 +80,7 @@
             app:layout_constraintTop_toBottomOf="@+id/timedate" />
 
         <TextView
-            android:id="@+id/textView3"
+            android:id="@+id/duration"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
@@ -101,7 +101,7 @@
             android:text="8:00 AM take 1"
             android:textColor="@color/black"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView3" />
+            app:layout_constraintTop_toBottomOf="@+id/duration" />
 
         <TextView
             android:id="@+id/textView5"
